# Laser-Cross-Calibration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: config.yaml
conf/device/: linear_stage.yaml
examples/: introduction-tutorial.ipynb  laser-cross-stage.ipynb  pipe-center-finder.ipynb
lcc-control-gui/: README.md  pyproject.toml
lcc-control-gui/firmware/src/: main.cpp
lcc-control-gui/src/lcc_control_gui/: __init__.py  __main__.py  main_window.py  serial_interface.py  stage_controller.py
lcc-control-gui/src/lcc_control_gui/widgets/: __init__.py  gcode_widget.py  log_widget.py  movement_widget.py  status_widget.py
lcc-control-gui/tests/: test_serial_interface.py  test_stage_controller.py
src/laser_cross_calibration/: __init__.py  config.py  constants.py  coordinate_system.py  coordinates.py  gcode.py  logger.py  types.py  utils.py
src/laser_cross_calibration/backend/: __init__.py
src/laser_cross_calibration/calibration/: __init__.py  points.py  stage.py  utils.py
src/laser_cross_calibration/coordinate_system/: __init__.py  frame.py  primitives.py  utils.py
src/laser_cross_calibration/gcode/: __init__.py  command.py  program.py
src/laser_cross_calibration/geometry/: __init__.py  pipe_center_finder.py
src/laser_cross_calibration/grid/: grid.py
src/laser_cross_calibration/materials/: __init__.py  base.py  constant.py  glass.py  mixtures.py  registry.py
src/laser_cross_calibration/optimization/: __init__.py  optimizer.py
src/laser_cross_calibration/optimize/: __init__.py  inverse.py
src/laser_cross_calibration/ray_tracing/: __init__.py  debug_intersection.py  materials.py  optics.py  ray.py  surfaces.py  system.py  visualization.py
src/laser_cross_calibration/sources/: __init__.py  base.py  dual_laser_stage.py  single_laser.py
src/laser_cross_calibration/surfaces/: __init__.py  base.py  bounded_plane.py  elliptic_cylinder.py  finite_cylinder.py  infinite_cylinder.py  plane.py  stl.py  triangulated.py
src/laser_cross_calibration/tracing/: __init__.py  intersection.py  optical_interface.py  optical_system.py  ray.py  tracer.py
src/laser_cross_calibration/visualization/: __init__.py  scene.py
tests/: conftest.py  test_coordinate_system.py  test_gcode_commands.py  test_gunady_setup.py  test_intersection.py  test_materials.py  test_optical_system.py  test_sources.py  test_surfaces.py  test_tracing.py  utils.py
