[project]
name = "laser-cross-calibration"
version = "0.1.0"
description = "A python package for non-sequential ray tracing with limited numbers of defined rays. Heavily inspired by the Optiland project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "numpy-stl>=3.2.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.10",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
]
