[project]
name = "laser-cross-calibration"
version = "0.1.0"
description = "A python package for non-sequential ray tracing with limited numbers of defined rays. Heavily inspired by the Optiland project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "numpy-stl>=3.2.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.10",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-watcher>=0.4.3",
]

[tool.uv.workspace]
members = ["lcc-control-gui"]

[tool.ruff]
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "PYI", # pyright
    "TC",  # type-checking
]
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    # "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests across multiple components",
    "slow: Tests that take longer to run",
]

[tool.coverage.run]
source = ["src/laser_cross_calibration"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
