[project]
name = "laser-cross-calibration"
version = "0.1.2"
description = "A python package for non-sequential ray tracing with limited numbers of defined rays. Heavily inspired by the Optiland project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hazy-frames",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "numpy-stl>=3.2.0",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
    "uncertainties>=3.2.3",
]

[project.optional-dependencies]
examples = ["mermaid-py>=0.8.0"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "nbstripout>=0.8.1",
    "pre-commit>=4.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.4.3",
    "ruff>=0.14.4",
]

[tool.uv.workspace]
members = ["lcc-control-gui"]

[tool.ruff]
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "PYI", # pyright
    "TC",  # type-checking
]
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    # "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests across multiple components",
    "slow: Tests that take longer to run",
]

[tool.coverage.run]
source = ["src/laser_cross_calibration"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
